cabal-version:       2.2
name:                meta
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sergei Stepanenko
maintainer:          kaptch@gmail.com
category:            Language
extra-source-files:  CHANGELOG.md
build-type:          Custom

custom-setup
  setup-depends:     Cabal
                   , base
                   , BNFC
                   , process
                     
library
  exposed-modules:     Meta
                     , Meta.Frontend
                     , Meta.Frontend.LexMeta
                     , Meta.Frontend.ParMeta
                     , Meta.Frontend.AbsMeta
                     , Meta.Frontend.PrintMeta
                     , Meta.Frontend.ErrM
                     , Meta.Backend
                     , Meta.Repl
  build-depends:       base
                     , array
                     , mtl
                     , containers
                     , nat
                     , repline
                     , megaparsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable meta
  main-is:             Main.hs
  other-modules:       Meta
                     , Meta.Frontend
                     , Meta.Frontend.LexMeta
                     , Meta.Frontend.ParMeta
                     , Meta.Frontend.AbsMeta
                     , Meta.Frontend.PrintMeta
                     , Meta.Frontend.ErrM
                     , Meta.Backend
                     , Meta.Repl
  build-depends:       base
                     , array
                     , megaparsec
                     , mtl
                     , repline
                     , containers
                     , nat
  hs-source-dirs:      src
  default-language:    Haskell2010
